@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  [Documentation]
+  - Added security policy.
+
   [Tests]
   - Added author tests for CVEs.
 
